[package]
name = "lk-to-s3"
version = "0.1.0"
authors = ["Arran France <arran@arranfrance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ureq = {version = "1.3" }
config = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
imap = "2.1.2"
native-tls = "0.2.4"
rust-s3 = { version = "0.22", features = ["fail-on-err"] }
chrono = "0.4"