[package]
name = "lk-to-s3"
version = "0.1.0"
authors = ["Arran France <arran@arranfrance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
config = "0.10.1"
imap = {version = "2.1.2", default-features = false}
rust-s3 = { version = "0.22", git = "https://github.com/arranf/rust-s3", rev = "a7489092c55d9f382d08a2d3f3d1491eaaa8168d", features = ["fail-on-err"] }
rustls-connector = { version = "0.11.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = {version = "1.3" }